# wld-usernames

./: .dockerignore  .env.bak  .env.example  .env.test  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  build.rs  deny.toml  docker-compose.yaml  foundry.toml  rust-toolchain.toml  test_e2e.sh
.cargo/: config.toml
.github/workflows/: build.yml  cargo-run.yml  ci.yml  relyance-sci.yml  test.yml
.sqlx/: query-0179b7f823393009ceac7dbe22fabfab99e385d41a6924c6ae5023858082a188.json  query-096f01c51751a7448e22312065212c745a962fd8765f5e3220a791d94dba15be.json  query-0bb76a105c90c17aee89c7694e4247a790c3312d1907d476a7013c809e6715da.json  query-0d286f97ddd41a71ad7e18f7dbee6f68573b2c9a078b517dd42653e25ee2a9e7.json  query-0fe377386844e40f477e98bab38bcdc07e2cadf3cc6af515e8d3df3366b68752.json  query-1156b9315b2c5d5d27fd24ada333ad2483172651783ab78d5f584584935c3c45.json  query-1183fc2b71f4c59e8076579d85460591fbe6f34d66454f3a96136a817cbc56ca.json  query-16d6d3afb098aff889823b2bc2faa114d1b4f064109764ae40bff6f311a3c7b7.json  query-1feeb2a8cdcaeb8da85e87209749f0e229b91ea2e7d102014fc11d50df22cfdc.json  query-240a179d0f0bf8e16f1bf3f973a333cab727edeba9ab16ced4c0c72992352372.json  query-2d645ac54be263c577107c50eb134fdeff39cff96d1779fa016242fb9f41ad49.json  query-3c874faa7efe0c74c305a0e5ade6039e39ad2891e80f8227fb6b669c2a0ff386.json  query-3de93c3e0d03582224fb2a0ed453fa2289e2241a9db4f6f6fe1c398f89c125b5.json  query-4289e0c9b944546ff412120381ed5ecb4f37dab390f015b0331994a64e8e0bb0.json  query-47830372409878532604af16d51e5151a002bd02ec6d828cf9284309ef4a5ce3.json  query-4addb54c6d14da0f92d1475bce69180e85c24fea9e129faeb36e981e9e90dca1.json  query-4bee24c848daf31e3a2a98eff1474b20d9795097de065041652d8883f1083105.json  query-4c5bf1e628a03cf14e9a0b2cfd9ec651a336ea45d8c016c30b8b0c26e5f991c1.json  query-4dcdc5889a45e573c7d5fa1fc544395ca0faaaec9f0780bb7596fe6ee7f8e38d.json  query-57788567a11e3066b6ab27beaf609f0fe42f9e138f43438dac59aec85f267c23.json  query-5a2af2f502bc367fd41d7a43195ff1f41c2d836c572a845d06b1c602f351934f.json  query-5d4f39ac6a135e6126a147b63c8229893288bc8661d96840701dc98a0d22911d.json  query-663cbe74585dd067af6802f0c8dad327440ad57bd4933d600efe53a92089cecf.json  query-67f572d3684e5698991e3eb9e9838a50a25ebdafc244376ef8ddc9b732bd6935.json  query-6987de3c86a14514eb8a59e8217d0187ab487651de457ca655dbfd85578cdd99.json  query-6a809d32ad7521ccb56c0f46e458dc4d8485e1aa70c77b875e4ecfcec565e44a.json  query-6f15a2cd0a7e6caf8a0745bdac9926751f6bfc302312288f8e021bf7fb7b03c6.json  query-701f3bb1ad55894f713c4b596d9df687123719aee819187b130527b04dfdda05.json  query-7222d43708bd418dfea7103d5d8951bad9eab48ba4d4629729127093f622720d.json  query-7973ec62fdfab2f0ddba2479cbb695907dfae40f2fb08138c07846d5334c2d8e.json  query-7a2a60285157478dd7c9feea43f97d7c29d8ce1d21375007bdccc42f18971c78.json  query-7a3ffd63b2bb0d49bebf4909c289493860aeb5299a9056997b4eaf8d95977d73.json  query-7d551e352e7991ad607d5934f3825df9d0f9e3e4f8f62019e4d9b03ad93a2349.json  query-89e1c60040ede9b7b9077bde7207df2a6907b9cead7536450beb8bcb23dbf8aa.json  query-9203398b084f31d1a78317d0da3a7ef529016262f386466c0979e695f27eb731.json  query-b57b529fbefa92e2c88b6e320cbc10202282aef4a5b31c69f5ba8117a2c797af.json  query-b98795430235f3a8f103f33978323dfa64fb7e1456e3287fe3fda06d3be24ae4.json  query-cb225a26fa94514498c7aff0786bd09fb42ef1fe133a4c1b4d1922e3ce80dc61.json  query-d3301497a1f07f9ba0876547039b6d64b1d0ad1b6e69e3b0c49bddd462bf061d.json  query-d980a3d7872c7806ea62fc344b9b6d04ed782d51e8b4c48fda0b9c338022a7af.json  (+5 more)
certs/: .gitignore  ca.crt  ca.key  ca.srl  redis.crt  redis.csr  redis.key
contracts/: UsernameResolver.sol
contracts/interfaces/: IExternalResolver.sol
contracts/tests/: UsernameResolver.t.sol
localstack/: init.sh
migrations/: 20240827152401_create_names_table.sql  20240827153407_create_old_names_table.sql  20240828210726_add_profile_pictures.sql  20241009032342_update_old_names_primary_key.sql  20241024235044_nullifier_hash_index.sql  20241029130636_username_search.sql  20241205111131_idx_names_address.sql  20241217182909_gist_on_usernames.sql  20241230195405_add_case_insensitive_username_indexes.sql  20250106194621_reconfigure_gist.sql  20250106194621_remove_gist.sql  20250411200515_add_minimized_profile_picture.sql  20250422215826_fill_minimized_profile_picture.sql  20251001000000_create_verifying_keys_table.sql  20251001202355_create_verifying_keys_table.sql
scripts/: init-localstack.sh
src/: blocklist.rs  config.rs  deletion.rs  main.rs  server.rs  utils.rs  verify.rs
src/attestation/: jwks_cache.rs  middleware.rs  mod.rs  request_hasher.rs  tests.rs  types.rs
src/data_deletion_worker/: data_deletion_worker.rs  deletion_completion_queue.rs  deletion_request_queue.rs  error.rs  mod.rs  username_deletion_service.rs  worker.rs
src/routes/: docs.rs  mod.rs  system.rs
src/routes/api/: mod.rs
src/routes/api/v1/: avatar.rs  delete_profile_picture.rs  ens_gateway.rs  health.rs  mod.rs  profile_picture.rs  query_multiple.rs  query_single.rs  register_username.rs  rename.rs  search.rs  update_record.rs
src/search/: mod.rs  opensearch.rs
src/types/: database.rs  ens.rs  error.rs  mod.rs  request.rs  response.rs  wrappers.rs
tests/: test_data_deletion_e2e.sh
