[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
readme = "README.md"
name = "wld-usernames"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/wld-usernames"
description = "Backend powering World App username registration and querying."

[dependencies]
axum = "0.7.9"
hex = "0.4.3"
http = "1.2.0"
idkit = "0.1.2"
regex = "1.11.1"
anyhow = "1.0.95"
tracing = "0.1.41"
dotenvy = "0.15.7"
thiserror = "1.0.69"
num-traits = "0.2.19"
serde_json = "1.0.135"
async-trait = "0.1.77"
futures = "0.3"
datadog-tracing = { version = "0.2.3", features = ["axum"] }
url = { version = "2.5.4", features = ["serde"] }
tokio = { version = "1.43.0", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors", "timeout"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
schemars = { version = "0.8.21", features = ["chrono", "url"] }
aide = { version = "0.13.4", features = ["axum", "macros", "scalar"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
ruint = { version = "1.12.4", default-features = false, features = [
    "num-traits",
] }
sqlxinsert = { version = "0.11.0", default-features = false, features = [
    "postgres",
] }
alloy = { git = "https://github.com/alloy-rs/alloy.git", features = [
    "eip712",
    "sol-types",
    "signer-local",
] }
sqlx = { version = "0.8.3", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "tls-rustls",
    "runtime-tokio",
], default-features = false }
redis = { version = "0.28.1", features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp", "tls-rustls-insecure"] }
rustls = { version = "0.23.21", features = ["ring"] }
aws-config = "1.5.14"
aws-sdk-dynamodb = "1.60.0"
aws-sdk-sqs = "1.17.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
once_cell = "1.19.0"
opensearch = { version = "2.2.0", features = ["rustls-tls"] }


[build-dependencies]
chrono = "0.4.39"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
