[package]
license = "MIT"
edition = "2021"
version = "0.1.0"
readme = "README.md"
name = "wld-usernames"
authors = ["Miguel Piedrafita <rust@miguel.build>"]
repository = "https://github.com/worldcoin/wld-usernames"
description = "Backend powering World App username registration and querying."
rust-version = "1.88"

[dependencies]
axum = { version = "0.7.9", features = ["multipart"] }
hex = "0.4.3"
http = "1.2.0"
idkit = "0.1.2"
regex = "1.11.1"
anyhow = "1.0.95"
tracing = "0.1.41"
dotenvy = "0.15.7"
thiserror = "1.0.69"
num-traits = "0.2.19"
serde_json = "1.0.135"
async-trait = "0.1.77"
futures = "0.3"
datadog-tracing = { version = "0.2.3", features = ["axum"] }
url = { version = "2.5.4", features = ["serde"] }
tokio = { version = "1.43.1", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0.217", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["cors", "timeout"] }
axum-jsonschema = { version = "0.8.0", features = ["aide"] }
schemars = { version = "0.8.21", features = ["chrono", "url"] }
aide = { version = "0.13.4", features = ["axum", "macros", "scalar"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
ruint = { version = "1.12.4", default-features = false, features = [
    "num-traits",
] }
image = { version = "0.25.9", default-features = false, features = [
    "jpeg",
    "png",
    "webp",
] }
sqlxinsert = { version = "0.11.0", default-features = false, features = [
    "postgres",
] }
alloy = { git = "https://github.com/alloy-rs/alloy.git", features = [
    "eip712",
    "sol-types",
    "signer-local",
] }
sqlx = { version = "0.8.3", features = [
    "chrono",
    "macros",
    "migrate",
    "postgres",
    "tls-rustls",
    "runtime-tokio",
], default-features = false }
redis = { version = "0.28.1", features = ["tokio-comp", "connection-manager", "tls-rustls", "tokio-rustls-comp", "tls-rustls-insecure"] }
ring = "0.17.12"
rustls = { version = "0.23.35", features = ["ring"] }
aws-config = { version = "1.8.11", features = ["behavior-version-latest"] }
aws-sdk-sqs = "1.90.0"
aws-sdk-dynamodb = "1.90.0"
aws-sdk-s3 = "1.115.0"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
once_cell = "1.19.0"
opensearch = { version = "2.2.0", features = ["aws-auth", "rustls-tls"] }
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
backon = "1.5.1"
base64 = "0.22.1"
k256 = "0.13.4"
jsonwebtoken = { version = "10.0.0", features = ["aws_lc_rs"] }
sha2 = "0.10.9"
multer = "3.1.0"
derive_more = { version = "1.0.0", features = ["display", "from"] }

[dev-dependencies]
wiremock = "0.6"
p256 = { version = "0.13", features = ["ecdsa", "jwk", "pkcs8"] }
rand = "0.8"
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1.11", features = ["v4"] }

[build-dependencies]
chrono = "0.4.39"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.
